@@ -1,6 +1,6 @@
 dnl Functions for libfvalue
 dnl
-dnl Version: 20111010
+dnl Version: 20111025
 
 dnl Function to detect if libfvalue available
 dnl ac_libfvalue_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -17,7 +17,8 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
   ])
 
  AS_IF(
-  [test "x$ac_cv_with_libfvalue" != xno],
+  [test "x$ac_cv_with_libfvalue" = xno],
+  [ac_cv_libfvalue=no],
   [dnl Check for headers
   AC_CHECK_HEADERS([libfvalue.h])
  
